--- a/index.htm
+++ b/index.htm
@@ -42,7 +42,7 @@
         	<img src="images/designer-photo.jpg" />
             <h2>My Name is John Hoeckele, and I am a Junior Full-Stack Web Developer</h2>
             <p>I've lived in Missouri — it was nice. I've lived in Colorado — it was also nice. Now I live in Florida and I plan to be here a while.</p>
-            <p> I currently work with Ruby, Rails, HTML, CSS, and Javascript but give me some time and I'm sure this list will expand.</p>
+            <p> I currently work with Ruby, Rails, HTML, CSS, and JavaScript but give me some time and I'm sure this list will expand.</p>
             <ul id="service-icons">
             	<li class="services-ruby">ruby</li>
                 <li class="services-rails">rails</li>
